2004-12-06  Tor Lillqvist  <tml@iki.fi>

	* glib/giowin32.c (g_io_win32_finalize): Fix a write to freed
	memory: Unlock the channel's mutex before unrefing the channel.

2004-12-06  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Remove a no longer needed hack for 
	libtool < 1.5.2.  (#100697, Owen Taylor, Sebastian Wilhelmi)

2004-12-05  Tor Lillqvist  <tml@iki.fi>

	* glib/glib.symbols
	* glib/gwin32.[hc]: Implement DLL ABI stability also for
	g_win32_get_package_installation_directory()) and
	g_win32_get_package_installation_subdirectory().

	* glib/Makefile.am (install-libtool-import-lib): Remove the DLL
	binary compatibilty entries from the import library. They aren't
	used by newly compiled code, so no need to have them in the import
	library. (The "PRIVATE" keyword in the .def file is supposed to do
	this, but not implemented in the GNU linker yet.)

2004-12-04  Matthias Clasen  <mclasen@redhat.com>

	* glib/gqueue.c (g_queue_link_index): Return -1 if queue is 
	NULL.  (#159530, Philippe Blain)

2004-12-02  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version.

	* === Released 2.5.7 ===
	
2004-12-02  Matthias Clasen  <mclasen@redhat.com>

	* glib/glib.symbols: Protect the the various push/pop allocator
	functions by #ifndef DISABLE_MEM_POOLS.  (#160215, Frederic Crozat)

	* glib/makegalias.pl: Support #ifndef'ed sections.

	* glib/gutils.c (g_get_system_config_dirs): Don't forget to 
	initialize g_system_config_dirs.  (#160213, Frederic Crozat)

Wed Dec  1 17:04:37 2004  Manish Singh  <yosh@gimp.org>

	* glib/gstring.h (g_string_append_c_inline): actually enable (and
	fix up the length test).

2004-11-30  Tor Lillqvist  <tml@iki.fi>

	* glib/Makefile.am (glib.def): gcc -E complains "linker input file
	unused because linking not done" if told to preprocess the
	glib.symbols file. Use '-' and redirection to pass it as standard
	input instead.

2004-11-30  Matthias Clasen  <mclasen@redhat.com>

	* NEWS: Updates
