@@ -33,6 +33,7 @@ void _g_convert_thread_init (void) G_GNUC_INTERNAL;
 void _g_rand_thread_init (void) G_GNUC_INTERNAL;
 void _g_main_thread_init (void) G_GNUC_INTERNAL;
 void _g_atomic_thread_init (void) G_GNUC_INTERNAL;
+void _g_utils_thread_init (void) G_GNUC_INTERNAL;
 #ifdef G_OS_WIN32
 void _g_win32_thread_init (void) G_GNUC_INTERNAL;
 #endif
